# vibration_predictor_cnn

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/: cwru_label_map_template.csv  labels_template.csv
src/vibration_predictor/: bootstrap_cwru.py  bootstrap_data.py  config.py  evaluate.py  inference.py  influx.py  model.py  predict.py  preprocess.py  train.py
